edited heroku remote name

--- a/home.html
+++ b/home.html
@@ -467,7 +467,7 @@
 											</li>
 										</ul>
 									</p><br />
-									<a class="paraTextGH" target="_blank" href="https://obscure-hollows-53067.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
+									<a class="paraTextGH" target="_blank" href="https://myfitnesshomie.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
 									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/fitnessApp">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
