--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 								Misc
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/1GGfuj16v2flXM-dyGB7tJUrKX_-AIy9z/view?usp=sharing">Download Resume</a>
+								<a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/179IT1EPjzvIVL3tpHGmudG2pzbJ0XZ_p/view?usp=sharing">Download Resume</a>
 							</div>
 						</li>
 				    </div>
@@ -508,7 +508,7 @@
 											</li>
 										</ul>
 									</p><br />
-									<a class="paraTextGH" target="_blank" href="https://dry-hollows-26971.herokuapp.com/blogs">Site (Slow initial load because free Heroku)</a><br />
+									<a class="paraTextGH" target="_blank" href="https://carmeloblog.herokuapp.com/blogs">Site (Slow initial load because free Heroku)</a><br />
 									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/blogApp">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
@@ -552,7 +552,7 @@
 											</li>
 										</ul>
 									</p><br />
-									<a class="paraTextGH" target="_blank" href="https://fierce-harbor-94742.herokuapp.com">Site (Slow initial load because free Heroku)</a><br />
+									<a class="paraTextGH" target="_blank" href="https://chattertexting.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
 									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/chatter">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
