added new project removed chatline

--- a/home.html
+++ b/home.html
@@ -13,36 +13,36 @@
 		<title>Ricky Chen</title>
 	</head>
 	<body>
-			<div class="container containerOveride">
-				<nav class="navbar bg-secondary navbar-dark navbar-expand-md fixed-top"><!-- Nav Bar Start -->
-				<a class="navbar-brand" href="#">Welcome!</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="#sectionSkillBar">Skills</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#trio">Info</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#projectNavSpot">Projects</a>
-						</li>
-						<div class="dropdown-divider"></div>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								Misc
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/179IT1EPjzvIVL3tpHGmudG2pzbJ0XZ_p/view?usp=sharing">Download Resume</a>
-							</div>
-						</li>
-				    </div>
-					</ul>
-					</nav><!-- Nav Bar End -->
-				</div>
+		<div class="container containerOveride">
+			<nav class="navbar bg-secondary navbar-dark navbar-expand-md fixed-top"><!-- Nav Bar Start -->
+			<a class="navbar-brand" href="#">Welcome!</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#sectionSkillBar">Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#trio">Info</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#projectNavSpot">Projects</a>
+					</li>
+					<div class="dropdown-divider"></div>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Misc
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" target="_blank" href="https://drive.google.com/file/d/179IT1EPjzvIVL3tpHGmudG2pzbJ0XZ_p/view?usp=sharing">Download Resume</a>
+						</div>
+					</li>
+			    </div>
+				</ul>
+				</nav><!-- Nav Bar End -->
+			</div>
 
 			<div class="desktopParallax containerOveride">
 				<section class="parallaxCover text-white d-flex justify-content-center align-items-center">
@@ -282,7 +282,7 @@
 							<div class="card">
 								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">Chatline - Java</h5>
+									<h5 class="card-title text-center display-5 paraText">Pubdemo Clone- ExpressJS</h5>
 								</div>
 							</div>
 						</a>
@@ -290,22 +290,32 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1 class="projectModalHeaders">Chatline</h1>
+									<h1 class="projectModalHeaders">Pubdemo Clone</h1>
 								</div>
 								<div class="modal-body">
 									<p class="paraText">
-										This project was built using the Parse backend. This was a group project where I focused on the chatting aspect. It has the simple features of login authentication, chatting and video chat (api). <br />
+										This is a remake of an existing project with ExpressJS for educational purposes. The site's main objective is to help new publishers onboard with our ad flow and layout. It allows for new publishers to traverse through possible layouts per site section. <br />
 									</p>
 									<h2>Tech Stack</h2>
 									<ul class="list-group">
 										<li class="list-group-item paraText">
-											Java
+											ExpressJS
 										</li>
 										<li class="list-group-item paraText">
-											Parse database
+											NodeJS
+										</li>
+										<li class="list-group-item paraText">
+											JQuery
+										</li>
+										<li class="list-group-item paraText">
+											MongoDB (mLabs)
+										</li>
+										<li class="list-group-item paraText">
+											Heroku
 										</li>
 									</ul><br />
-									Disclaimer: No Github due to repo owner deleting the repo.<br />
+									<a class="paraTextGH" target="_blank" href="http://pubdemo.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
+									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/pubdemo">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
