--- a/home.html
+++ b/home.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="./css/home.css" />
 		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Anton|Open+Sans|Rubik|Cinzel|Sigmar+One" rel="stylesheet">
@@ -14,7 +17,7 @@
 	</head>
 	<body>
 		<div class="container containerOveride">
-			<nav class="navbar bg-secondary navbar-dark navbar-expand-md fixed-top"><!-- Nav Bar Start -->
+			<nav class="navbar bg-secondary navbar-dark navbar-expand-md fixed-top menubar"><!-- Nav Bar Start -->
 			<a class="navbar-brand" href="#">Welcome!</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -46,7 +49,7 @@
 
 			<div class="desktopParallax containerOveride">
 				<section class="parallaxCover text-white d-flex justify-content-center align-items-center">
-					<div class="container text-center text-bottom">
+					<div class="container text-center text-bottom topCoverText">
 					  <h1 class="display-1 text-secondary text-uppercase paraText">Ricky Chen</h1>
 					  <p class="display-4 text-white d-none d-sm-block fadeInEffect7 paraText">BS in Computer Science</p>
 					  <p class="lead text-white fadeInEffect7 paraText">San Francisco, California</p>
@@ -64,7 +67,7 @@
 					    </div>
 					</div>
 					<div id="percentBars" class="col-12">
-						<div>
+						<div class="skillcontainer">
 							<div class="progress skillmargin">
 								<div class="progress-bar bg-secondary" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div> <span class="text-secondary">42%</span>
 							</div>
