changed welcome to name

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 	<body>
 		<div class="container containerOveride">
 			<nav class="navbar bg-secondary navbar-dark navbar-expand-md fixed-top menubar"><!-- Nav Bar Start -->
-			<a class="navbar-brand" href="#">Welcome!</a>
+			<a class="navbar-brand" href="#">Ricky Chen</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
