css fixes to mobile

--- a/home.html
+++ b/home.html
@@ -575,9 +575,9 @@
 				</div>
 			</section>
 			</div>
-			<footer id="foot" class="bg-light">
+			<footer id="foot" class="bg-light botFooter">
 				<div class="row footStyle justify-content-center align-items-center">
-					<div class="col-md-6">
+					<div class="col-md-6 footDesc">
 					  <ul class="list-inline">
 						<li class="socialMedia list-inline-item">&copy; 2019 Ricky Chen</li>
 						<li class="socialMedia list-inline-item">All rights reserved.</li>
