changed SQL project to Crowd Score project

--- a/home.html
+++ b/home.html
@@ -327,9 +327,9 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project13Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/q6xb5GP.jpg" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/7RleFrt.png" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">Messenger SQL - Java|SQL</h5>
+									<h5 class="card-title text-center display-5 paraText">Crowd Score - MERN</h5>
 								</div>
 							</div>
 						</a>
@@ -337,22 +337,30 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1 class="projectModalHeaders">Messenger SQL</h1>
+									<h1 class="projectModalHeaders">Crowd Score</h1>
 								</div>
 								<div class="modal-body">
 									<p>
-										The database that stores the messenges was built with Java and the queries were coded in SQL.<br />
+										A TV Series search engine that uses multiple APIs to pull in ratings + misc info.<br />
+										Responsive but optimized mostly for mobile <br />
 									</p><br />
 									<h2>Tech Stack</h2>
 									<ul class="list-group">
 										<li class="list-group-item paraText">
-											Java
+											MongoDB
 										</li>
 										<li class="list-group-item paraText">
-											mySQL
+											ExpressJS
+										</li>
+										<li class="list-group-item paraText">
+											React
+										</li>
+										<li class="list-group-item paraText">
+											NodeJS
 										</li>
 									</ul><br />
-									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/messengerSQL">Github Link</a><br />
+									<a class="paraTextGH" target="_blank" href="https://crowdscore.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
+									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/crowdscore">Github Link</a><br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
