--- a/home.html
+++ b/home.html
@@ -285,7 +285,7 @@
 							<div class="card">
 								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">Pubdemo Clone- ExpressJS</h5>
+									<h5 class="card-title text-center display-5 paraText">Pubdemo Clone- MEN</h5>
 								</div>
 							</div>
 						</a>
@@ -500,7 +500,7 @@
 							<div class="card">
 								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/RT95QLh.jpg" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">Carmelo Homage- ExpressJs</h5>
+									<h5 class="card-title text-center display-5 paraText">Carmelo Homage- MEN</h5>
 								</div>
 							</div>
 						</a>
