edited CrowdScore Text

--- a/home.html
+++ b/home.html
@@ -329,7 +329,7 @@
 							<div class="card">
 								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/7RleFrt.png" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">Crowd Score - MERN</h5>
+									<h5 class="card-title text-center display-5 paraText">In progress - MERN</h5>
 								</div>
 							</div>
 						</a>
@@ -341,8 +341,7 @@
 								</div>
 								<div class="modal-body">
 									<p>
-										A TV Series search engine that uses multiple APIs to pull in ratings + misc info.<br />
-										Responsive but optimized mostly for mobile <br />
+										A Movie & TV Series search engine that uses multiple APIs to pull in ratings + misc info.<br />
 									</p><br />
 									<h2>Tech Stack</h2>
 									<ul class="list-group">
@@ -456,7 +455,7 @@
 							<div class="card">
 								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/A65rjCy.png" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">In Progress</h5>
+									<h5 class="card-title text-center display-5 paraText">myFitnessHomie - MEN</h5>
 								</div>
 							</div>
 						</a>
