--- a/home.html
+++ b/home.html
@@ -8,10 +8,9 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="./css/home.css" />
-		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Anton|Open+Sans|Rubik|Cinzel|Sigmar+One" rel="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Rokkitt|Anton|Open+Sans|Rubik|Cinzel|Sigmar+One" rel="stylesheet"> -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Neuton:wght@800&display=swap" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" crossorigin="anonymous"></script>
 		<script src="./js/fadeSection.js"></script>
 		<script src="./js/progressBar.js"></script>
@@ -20,7 +19,7 @@
 	</head>
 	<body>
 		<div class="container containerOveride">
-			<nav class="navbar navbar-expand-md fixed-top menubar"><!-- Nav Bar Start -->
+			<nav class="navbar navbar-expand-md fixed-top"><!-- Nav Bar Start -->
 				<a class="navbar-brand ubuntuFont" href="#">Ricky Chen</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -51,8 +50,8 @@
 			</div>
 
 			<div class="desktopParallax containerOveride">
-				<section class="parallaxCover text-white d-flex justify-content-center align-items-center">
-					<div class="container text-bottom topCoverText">
+				<section class="parallaxTop text-white d-flex justify-content-center align-items-center">
+					<div id="topCoverText" class="container text-bottom">
 					  <h1 class="display-1 text-uppercase">
 						  <span class="name ubuntuFont">
 						  	Ricky<br> Chen
@@ -95,7 +94,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="trio" class="row trioIcon">
+				<div id="trio" class="row">
 					<div id="educationBlock" class="col-4 col-sm-4 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
 						<a href="#" class="modalBtn" data-modal="eduModalName">
 							<div class="h1">
@@ -611,7 +610,7 @@
 			</section>
 			</div>
 			<footer id="foot" class="bg-light botFooter">
-				<div class="row footStyle justify-content-center align-items-center">
+				<div id="footStyle" class="row justify-content-center align-items-center">
 					<div class="col-md-6 footDesc">
 					  <ul class="list-inline">
 						<li class="socialMedia list-inline-item">&copy; 2020 Ricky Chen</li>
