--- a/home.html
+++ b/home.html
@@ -53,16 +53,16 @@
 				<section class="parallaxTop text-white d-flex justify-content-center align-items-center">
 					<div id="topCoverText" class="container text-bottom">
 					  <h1 class="display-1 text-uppercase">
-						  <span class="name ubuntuFont">
+						  <span id="fullName" class="ubuntuFont">
 						  	Ricky<br> Chen
 					  	  </span>
 					  </h1>
-					  <p class="text-white d-none d-sm-block fadeInEffect7 paraText subHeader shadowTextSM ubuntuFont"> BS <span id="colorIt">in</span> Computer Science</p>
+					  <p class="text-white d-sm-block fadeInEffect7 paraText subHeader shadowTextSM ubuntuFont"> BS <span id="colorIt">in</span> Computer Science</p>
 					</div>
 				</section>
 			</div>
 			<section id="sectionSkillBar" class="containerOveride parallaxSkill text-white d-flex justify-content-center align-items-center containerOveride">
-				<div class="row">
+				<div id="skillHeaderBar" class="row">
 					<div id="skilBar"  class="col-12">
 						<div class="container text-center text-bottom">
 					      <h1 class="text-uppercase profParaText shadowText ubuntuFont">Professional<span id="colorIt">:</span></h1>
@@ -71,23 +71,23 @@
 					</div>
 					<div id="percentBars" class="col-12">
 						<div id="skillcontainer">
-							<span class="shadowTextSM ubuntuFont"><b>C++</b></span>
+							<span class="skillText shadowTextSM ubuntuFont"><b>C++</b></span>
 							<div class="progress skillmargin">
 								<div class="progress-bar bg-secondary" id="pb1" role="progressbar"aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div> <span class="progressPercent" id="pro1">42%</span>
 							</div>
-							<span class="shadowTextSM ubuntuFont"><b>Python</b></span>
+							<span class="skillText shadowTextSM ubuntuFont"><b>Python</b></span>
 							<div class="progress skillmargin">
 								<div class="progress-bar bg-secondary" id="pb2" role="progressbar"aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div> <span class="progressPercent" id="pro2">50%</span>
 							</div>
-							<span class="shadowTextSM ubuntuFont"><b>HTML/CSS/JS</b></span>
+							<span class="skillText shadowTextSM ubuntuFont"><b>HTML/CSS/JS</b></span>
 							<div class="progress skillmargin">
 								<div class="progress-bar bg-secondary" id="pb3" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"></div> <span class="progressPercent" id="pro3">83%</span>
 							</div>
-							<span class="shadowTextSM ubuntuFont"><b>Excel VBA</b></span>
+							<span class="skillText shadowTextSM ubuntuFont"><b>Excel VBA</b></span>
 							<div class="progress skillmargin">
 								<div class="progress-bar bg-secondary" id="pb4" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"></div> <span class="progressPercent" id="pro4">68%</span>
 							</div>
-							<span class="shadowTextSM ubuntuFont"><b>Excel</b></span>
+							<span class="skillText shadowTextSM ubuntuFont"><b>Excel</b></span>
 							<div class="progress skillmargin">
 								<div class="progress-bar bg-secondary" id="pb5" role="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div> <span class="progressPercent" id="pro5">42%</span>
 							</div>
@@ -240,7 +240,7 @@
 					<span class="display-3 projParaText"></span>
 					<span id="projectNavSpot"></span>
 					<div id="projectBoxes1" class="row">
-						<div class="col-4 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 							<a href="#" class="modalBtn" data-modal="project11Name">
 								<div class="card">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/TbSBWFc.jpg" alt="Card image cap">
