added 8 @media for different viewport for frame 1 and frame 3

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 		<div class="container containerOveride">
 			<nav class="navbar navbar-expand-md fixed-top"><!-- Nav Bar Start -->
 				<a class="navbar-brand ubuntuFont" href="#">Ricky Chen</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -52,11 +52,11 @@
 			<div class="desktopParallax containerOveride">
 				<section class="parallaxTop text-white d-flex justify-content-center align-items-center">
 					<div id="topCoverText" class="container text-bottom">
-					  <h1 class="display-1 text-uppercase">
+					  <div class="text-uppercase">
 						  <span id="fullName" class="ubuntuFont">
 						  	Ricky<br> Chen
 					  	  </span>
-					  </h1>
+					  </div>
 					  <p class="text-white d-sm-block fadeInEffect7 paraText subHeader shadowTextSM ubuntuFont"> BS <span id="colorIt">in</span> Computer Science</p>
 					</div>
 				</section>
@@ -240,12 +240,12 @@
 					<span class="display-3 projParaText"></span>
 					<span id="projectNavSpot"></span>
 					<div id="projectBoxes1" class="row">
-						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project11Name">
 								<div class="card">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/TbSBWFc.jpg" alt="Card image cap">
 									<div class="card-body">
-										<h5 class="card-title text-center display-5 paraText">AutoPilot - <span id="colorIt">JS</span></h5>
+										<div class="card-title text-center display-5 paraText">AutoPilot - <span id="colorIt">JS</span></div>
 									</div>
 								</div>
 							</a>
@@ -306,12 +306,12 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project12Name">
 								<div class="card">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
 									<div class="card-body">
-										<h5 class="card-title text-center display-5 paraText">Pubdemo Clone- <span id="colorIt">MEN</span></h5>
+										<div class="card-title text-center display-5 paraText">Pubdemo Clone- <span id="colorIt">MEN</span></div>
 									</div>
 								</div>
 							</a>
@@ -350,12 +350,12 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project13Name">
 								<div class="card">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/7RleFrt.png" alt="Card image cap">
 									<div class="card-body">
-										<h5 class="card-title text-center display-5 paraText">In progress - <span id="colorIt">MERN</span></h5>
+										<div class="card-title text-center display-5 paraText">In progress - <span id="colorIt">MERN</span></div>
 									</div>
 								</div>
 							</a>
@@ -391,12 +391,12 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project14Name">
 								<div class="card">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/zn9s9s7.jpg" alt="Card image cap">
 									<div class="card-body">
-										<h5 class="card-title text-center display-5 paraText">Audit Macros - <span id="colorIt">VBA</span></h5>
+										<div class="card-title text-center display-5 paraText">Audit Macros - <span id="colorIt">VBA</span></div>
 									</div>
 								</div>
 							</a>
@@ -440,14 +440,12 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div id="projectBoxes2" class="row">
-						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project21Name">
 								<div class="card" style="width>:100%;">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/pr2j46R.png" alt="Card image cap">
 									<div class="card-body">
-										<h5 class="card-title text-center display-5 paraText">This Webiste - <span id="colorIt">HTML | CSS</span></h5>
+										<div class="card-title text-center display-5 paraText">This Webiste - <span id="colorIt">HTML | CSS</span></div>
 									</div>
 								</div>
 							</a>
@@ -476,12 +474,12 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project22Name">
 								<div class="card">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/A65rjCy.png" alt="Card image cap">
 									<div class="card-body">
-										<h5 class="card-title text-center display-5 paraText">myFitnessHomie - <span id="colorIt">MEN</span></h5>
+										<div class="card-title text-center display-5 paraText">myFitnessHomie - <span id="colorIt">MEN</span></div>
 									</div>
 								</div>
 							</a>
@@ -520,12 +518,12 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project23Name">
 								<div class="card">
 									<img class="card-img-top cardProjectImage" src="https://i.imgur.com/RT95QLh.jpg" alt="Card image cap">
 									<div class="card-body">
-										<h5 class="card-title text-center display-5 paraText">Carmelo Homage- <span id="colorIt">MEN</span></h5>
+										<div class="card-title text-center display-5 paraText">Carmelo Homage- <span id="colorIt">MEN</span></div>
 									</div>
 								</div>
 							</a>
@@ -561,12 +559,12 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+						<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cardBox">
 							<a href="#" class="modalBtn" data-modal="project24Name">
 								<div class="card">
 									<img class="card-img-top cardProjectImage" src="https://images.unsplash.com/photo-1536312975196-2f175c3c0eed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=943&q=80" alt="Card image cap">
 									<div class="card-body">
-										<h5 class="card-title text-center display-5 paraText">Messenger App Demo - <span id="colorIt">MEN</span> </h5>
+										<div class="card-title text-center display-5 paraText">Messenger App Demo - <span id="colorIt">MEN</span> </div>
 									</div>
 								</div>
 							</a>
@@ -605,25 +603,36 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div><!---->
+
 				</div>
 			</section>
 			</div>
 			<footer id="foot" class="bg-light botFooter">
 				<div id="footStyle" class="row justify-content-center align-items-center">
-					<div class="col-md-6 footDesc">
-					  <ul class="list-inline">
+					<div class="footDesc">
+						<span class="footInfo">&copy; 2020 Ricky Chen</span>
+						<span class="footInfo"><a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a></span>
+						<span class="footInfo"><a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a></span>
+
+					  <!-- <ul class="list-inline">
 						<li class="socialMedia list-inline-item">&copy; 2020 Ricky Chen</li>
-						<li class="socialMedia list-inline-item">All rights reserved.</li>
+						<li class="socialMedia list-inline-item"><a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a></li>
+						<li class="socialMedia list-inline-item"><a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a></li>
+						 <li class="socialMedia list-inline-item">All rights reserved.</li>
 						<li class="socialMedia list-inline-item">Terms of use and privacy policy</li>
-					  </ul>
+					  </ul> -->
+					  <!-- <div class="socialMedia">
+						  <a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a>
+						  <a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a>
+					  </div> -->
 					</div>
-					<div class="col-md-6">
+					<!-- <div class="col-md-6">
 						<div class="socialMedia">
 							<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a>
 							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</footer>
 		<!-- Bootstrap -->
