added @media for frame 2

--- a/home.html
+++ b/home.html
@@ -65,8 +65,8 @@
 				<div id="skillHeaderBar" class="row">
 					<div id="skilBar"  class="col-12">
 						<div class="container text-center text-bottom">
-					      <h1 class="text-uppercase profParaText shadowText ubuntuFont">Professional<span id="colorIt">:</span></h1>
-					      <p class="display-5 d-none d-sm-block profParaText shadowText ubuntuFont">My Skill Level Breakdown</p>
+					      <div id="skillHeader" class="text-uppercase profParaText shadowText ubuntuFont">Professional<span id="colorIt">:</span></div>
+					      <p id="skillSubHeader" class="d-sm-block profParaText shadowText ubuntuFont">My Skill Level Breakdown</p>
 					    </div>
 					</div>
 					<div id="percentBars" class="col-12">
