changed skill background

--- a/home.html
+++ b/home.html
@@ -16,8 +16,20 @@
 		<script src="./js/progressBar.js"></script>
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<title>Ricky Chen</title>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-NTZ6534');</script>
+		<body>
+<!-- End Google Tag Manager -->
 	</head>
-	<body>
+
+		<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTZ6534"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 		<div class="container containerOveride">
 			<nav class="navbar navbar-expand-md fixed-top"><!-- Nav Bar Start -->
 				<a class="navbar-brand ubuntuFont" href="#">Ricky Chen</a>
